2005-11-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/MaskFormatter.java:
	(convertValue): If character is a literal don't throw a ParseException
	unless literals aren't allowd in values and this method is being 
	called from valueToString rather than stringToValue.  The convert flag
	is used to distinguish these two cases.

2005-11-22  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/metal/MetalComboBoxUI.java
	(configureEditor): Implemented.
	(unconfigureEditor): Implemented.
	(layoutComboBox): Implemented.

2005-11-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/MaskFormatter.java: New class.

2005-11-22  Lillian Angel  <langel@redhat.com>

	PR 24937
	* gnu/java/awt/peer/gtk/GdkGraphics.java
	(drawString): Removed pattern matching code. This is now
	done in native.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c
	(Java_gnu_java_awt_peer_gtk_GdkGraphics_drawString): Added
	a loop to filter out all non-printing characters.

2005-11-22  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/text/DefaultCaret.java (updateTimerStatus): 
	Ignore the field "visible". 

2005-11-22  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/TransferHandler
	(getClipboard): Aways check for the possibility to 
	access the system clipboard.

2005-11-22  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicOptionPaneUI.java
	(addMessageComponents): Also burst the string if there are newlines
	in it.
	(burstStringInto): Improved algorithm to also handle newlines.

2005-11-22  Lillian Angel  <langel@redhat.com>

	* gnu/java/awt/peer/gtk/GdkGraphics.java
	(drawString): Fixed regex.

2005-11-22  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #22691
	* java/io/StreamTokenizer.java(parseNumbers): Added some comment.

2005-11-22  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	PR 24942
	* javax/swing/text/DefaultCaret.java (focusGained):
	Update timer status. (focusLost): Stop the timer